--- a/.github/workflows/alert.yml
+++ b/.github/workflows/alert.yml
@@ -1,9 +1,10 @@
+
 name: MACD 5m Alert com Validação de Volume
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Executa a cada 5 minutos (UTC)
-  workflow_dispatch:       # Permite execução manual via UI do GitHub
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   check-macd:
@@ -24,10 +25,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      - name: Create config.py from example (safe template)
+      - name: Create config.py from example
         run: |
           cp config.py.example config.py
-          echo "⚠️ ATENÇÃO: Este é um template SEM chaves. Configure Secrets no GitHub!"
           
       - name: Run MACD Alert
         env:
@@ -36,13 +36,17 @@ jobs:
           BINANCE_API_KEY: ${{ secrets.BINANCE_API_KEY }}
           BINANCE_API_SECRET: ${{ secrets.BINANCE_API_SECRET }}
         run: python alert_macd.py
-        continue-on-error: true  # Não falhar workflow se houver erro temporário
+        continue-on-error: true
         
-      - name: Commit database state (persistência)
+      - name: Export data to JSON (for HTML dashboard)
+        run: python export_data.py
+        continue-on-error: true
+        
+      - name: Commit database and JSON state
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add alerts.db
-          git commit -m "[auto] Atualização estado $(date '+%Y-%m-%d %H:%M UTC')" || echo "Nenhuma mudança no DB"
-          git push origin main || echo "Push ignorado (sem mudanças)"
+          git add alerts.db data.json
+          git commit -m "[auto] Atualização estado $(date '+%Y-%m-%d %H:%M UTC')" || echo "Nenhuma mudança"
+          git push origin main || echo "Push ignorado"
         continue-on-error: true
